--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,10 +2,16 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact</h2>
-                <p>Ready to Embark on a Digital Transformation Journey?
+                <h2>Boka in ett möte</h2>
+                <p>Är du redo att utforska möjligheter för strategisk tillväxt och digital innovation i ditt företag? Boka en konsultation med Peter Sandström för att diskutera hur din organisation kan dra nytta av hans tjänster.
                 </p>
-                <p>Contact Peter Sandström today to explore how your organisation can lead digitally. <a href="mailto:{{ site.email }}">{{ site.email }}</a> / +46 73 373 24 42
+                <ul class="list-inline banner-social-buttons">
+                    <li>
+                        <a href="https://calendly.com/sandstream/30min" class="btn btn-default btn-lg"><i class="fa-calender"></i> <span class="Book a meeting">Boka ett möte</span></a>
+                    </li>
+                </ul>
+                <p>
+                    <a href="mailto:{{ site.email }}">{{ site.email }}</a> / +46 73 373 24 42
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     {% for network in site.social %}
