--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <!--<i class="fa fa-play-circle"></i>-->  sandstream
+                    <!--<i class="fa fa-play-circle"></i>-->  sandstream AB
                 </a>
             </div>
 
@@ -18,13 +18,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Interim ledarskap</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About Peter</a>
+                        <a class="page-scroll" href="#about">Om Peter</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Boka ett möte</a>
                     </li>
                 </ul>
             </div>
