--- a/_includes/section1.html
+++ b/_includes/section1.html
@@ -5,9 +5,9 @@
                 <div class="row">
                    
                     <div class="col-lg-12 col-md-12 col-sm-12" style="background: rgba(0, 0, 0, 0.8); padding: 20px;">
-                        <h2>DRIVING YOUR BUSINESS FORWARD
-                            <br> with Peter Sandström</h2>
-                        <p>In the fast-paced digital economy, businesses need a strategist who is deeply familiar with the technological landscape. Peter Sandström is your partner in Stockholm, offering over twenty years of experience in leading and innovating. With Peter, your business doesn’t just evolve to meet the digital demands; it thrives, transforming technological capabilities into competitive advantages, and scripting success stories in the digital space.</p>
+                        <h2>Ta ditt företag framåt 
+                            <br> med Peter Sandström</h2>
+                        <p>I den hastigt föränderliga digitala ekonomin behöver företag en strateg som har djup förståelse för det tekniska landskapet. Peter Sandström, verksam i Stockholm, har mer än tjugo års erfarenhet av ledarskap och innovation inom tech. Med Peter omvandlar ditt företag digitala utmaningar till möjligheter och tekniska framsteg till konkurrensfördelar.</p>
                     </div>
                     
                 </div>
