--- a/_includes/section2B.html
+++ b/_includes/section2B.html
@@ -5,13 +5,13 @@
                 <div class="row" style="background: rgba(0, 0, 0, 0.8); padding: 20px;">
 
                     <div class="col-lg-6 col-md-6">
-                        <h4 style="color:#ffffcc">STRATEGIC DIGITAL GROWTH</h4> 
-                            <p>Peter leverages his extensive experience to steer businesses through the digital landscape. He designs tailored strategies, creates custom roadmaps, and positions your business for sustainable growth and market leadership.</p>
+                        <h4 style="color:#ffffcc">STRATEGISK TILLVÄXT med Tech</h4> 
+                            <p>Med sin omfattande erfarenhet inom ledarskap och teknik leder Peter företag genom processer för digital tillväxt. Han skapar skräddarsydda strategier som positionerar ditt företag för en hållbar framtid.</p>
                     </div>
                     <div class="col-lg-6 col-md-6">
-                        <h4 style="color:#52a2d4">ADAPTIVE INTERIM LEADERSHIP
+                        <h4 style="color:#52a2d4">Interim ledarskap
                         </h4>
-                            <p>In transition or critical scaling periods, Peter steps in with adaptive leadership roles, such as CTO/CIO/CDO or Managing Director. His guidance is more than temporary stewardship; it's a positive impact, vital for maintaining momentum, fostering innovation, and steering your company through the multifaceted phases of digital integration and expansion.</p>
+                            <p>Under övergångsperioder eller i kritiska skalfaser, agerar Peter som en anpassningsbar ledare, till exempel som Managing Director inom tech eller som CPO, CTO, CIO eller CDO. Hans vägledning är avgörande för att upprätthålla momentum, stimulera innovation och navigera ditt företag genom komplexa etapper av digital integration och expansion.</p>
                     </div>
                 </div>
             </div>
