--- a/_includes/section3.html
+++ b/_includes/section3.html
@@ -10,9 +10,10 @@
                 </div>
                 <div class="col-lg-6 col-md-6" style="background: rgba(0, 0, 0, 0.5); padding: 20px;">
                     <h2>
-                        About Peter Sandström:<br> PROVEN LEADERSHIP IN DRIVING INNOVATIVE GROWTH
+                        OM PETER SANDSTRÖM:
+<br> BEVISAT LEDARSKAP FÖR INNOVATION OCH TILLVÄXT
                     </h2>
-                    <p>Peter Sandström's career is marked by a commitment to excellence, evidenced by transformative leadership roles and the successful integration of technology in various sectors. With strategic foresight, he has expanded teams and enhanced customer satisfaction. His approach to business solutions is not just innovative—it's practical and results-driven.</p>
+                    <p>Peter Sandströms karriär utmärks av förändringsledarskap och avancerad teknisk kunskap, vilket har drivit tillväxt över en mångfald av branscher. Hans strategiska insikter har lett till teamutveckling och förbättrade kundupplevelser, vilket visar på hans praktiska och nyskapande affärstänk.</p>
                 </div>
                </div>
             </div>
