--- a/_includes/section2A.html
+++ b/_includes/section2A.html
@@ -4,11 +4,8 @@
             <div class="container">
                 <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6" style="background: rgba(0, 0, 0, 0.8); padding: 20px;">
-                    <h2>GUIDING DIGITAL AND ORGANIZATIONAL GROWTH 
-                        
-
-                        <br> WITH INSIGHT AND AGILITY</h2>
-                    <p>Peter provides strategic oversight fused with practical technological insights, delivering services that foster your business’s growth and digital maturity. He specializes in holistic digital transformation strategies, adaptive interim leadership, and the integration of effective digital tools.</p>
+                    <h2>DIGITAL OCH ORGANISATORISK TILLVÄXT</h2>
+                    <p>Peter erbjuder strategisk översikt kombinerat med praktisk teknisk insikt, vilket främjar tillväxt och digital mognad för ditt företag. Han är expert på omfattande lösningar för digital transformation, anpassat interimsledarskap och användning av innovativa verktyg.</p>
                 </div>
                 </div>
             </div>
