--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,13 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">{{ site.title }}</h1>
                         <p class="intro-text">{{ site.description }}<br>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                            <ul class="list-inline banner-social-buttons">
+                                <li>
+                                    <a href="https://calendly.com/sandstream/30min" class="btn btn-default btn-lg"><i class="fa-calender"></i> <span class="Book a meeting">Boka ett möte</span></a>
+                                </li>
+                            </ul>
+                       
+                            <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
